js262/test/built-ins/Error/prototype/constructor/prop-desc.js


/*---
esid: sec-error.prototype.constructor
description: Property descriptor of Error.prototype.constructor
includes: [propertyHelper.js]
---*/

verifyProperty(Error.prototype, 'constructor', {
  enumerable: false,
  writable: true,
  configurable: true,
  value: Error
});
